--- a/tools/data_lib_generator/Cargo.toml
+++ b/tools/data_lib_generator/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+csv = "1.3.1"
+regex = "1.11.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.133"
