change applicative data

--- a/applicative_data.json
+++ b/applicative_data.json
@@ -588,7 +588,8 @@
       "id":11,
       "name":"MAX_MUX_FRAME_NUMBER",
       "kind":"define",
-      "type":"",      "dimension": 1,
+      "type":"",
+      "dimension": 1,
       "initialization_value": 100,
       "comment":""
     },
@@ -611,7 +612,8 @@
     {
       "id":14,
       "name":"SERIAL_BGF",
-      "type":"define",
+      "kind":"define",
+      "type":"",
       "dimension": 1,
       "initialization_value": 11,
       "comment":""
@@ -619,7 +621,8 @@
     {
       "id":15,
       "name":"SERIAL_COM",
-      "type":"define",
+      "kind":"define",
+      "type":"",
       "dimension": 1,
       "initialization_value": 12,
       "comment":""
